# NoRCB

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  deps.pip  main.py  norcb  norcb-paper-exp-size  norcb.cbp
include/: algorithm.hpp  geometry_utils.hpp  norcb.hpp  rcb.hpp
include/geom/: utils.hpp
include/impl/CGAL/: geometry.hpp  norcb.hpp  rcb.hpp
include/impl/custom/: geometry.hpp  norcb.hpp
include/numeric/: utils.hpp
lib/: math.py  norcb.py  show.py  utils.py
src/: main.cpp  norcb.cpp
src/geom/: utils.cpp
tests/: main.cpp
